Tue Aug 13 16:15:08 2002  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch], gui/gdmlogin.c, gui/greeter/greeter_system.c,
	  config/gdm.conf.in: The Shutdown/Halt/Suspend keys can now be
	  a list of commands.  If this is the case, the first working one
	  will be used.  This way we can find the most appropriate command
	  to use and distros will not have to redo the config as much.

	* daemon/gdm.[ch], daemon/misc.[ch], daemon/verify-*.c,
	  config/gdm.conf.in: Add a long standing feature request of no
	  password logins for certain users on the local console.  Just
	  set LocalNoPasswordUsers to a list of such users.  Fixes #51908

	* daemon/server.c: on reinit of server do a sleep(1) after the
	  kill (pid, SIGHUP) as an incredible hack to avoid a race.  Fun
	  fun fun with the X server.

Tue Aug 13 12:49:18 2002  George Lebl <jirka@5z.com>

	* config/gdm.conf.in: update this, add MinimalUID, add a bunch of
	  comments and reorganize a little bit to be more logical

	* gui/gdmlogin.c: when the gdm.xpm isn't found for icon try gdm.png
	  to make it easier for transition to the new nicer icon

	* gui/gdmphotosetup.c: Don't use gtk_dialog_run, that makes the
	  main window here modal and we don't want that.  Fixes #90613.  

	* pixmaps/Makefile.am: don't install gdm.xpm anymore

Tue Aug 13 11:52:28 2002  George Lebl <jirka@5z.com>

	* pixmaps/Makefile.am, pixmaps/gdm.png, pixmaps/gdm-foot-logo.png:
	  Create new icon myself.  New large logo thing with the new foot

	* config/gdm.conf.in, daemon/gdm.h, gui/*.desktop.in: use the new
	  logo and icon everywhere

Tue Aug 13 08:27:18 2002  George Lebl <jirka@5z.com>

	* config/gdm.conf.in: update comment on top to be correct
          (USR1 vs. HUP) redhat bug 71308

Thu Aug 08 09:36:11 2002  George Lebl <jirka@5z.com>

	* Release 2.4.0.7

Thu Aug 08 09:33:50 2002  George Lebl <jirka@5z.com>

	* config/gettextfoo.h, config/XKeepsCrashing:  Fix the message bits.

Wed Aug 07 21:01:41 2002  George Lebl <jirka@5z.com>
