@@ -77,6 +77,8 @@ void gdm_close_all_descriptors (int from, int except);
 
 gboolean gdm_is_a_no_password_user (const char *user);
 
+int gdm_open_dev_null (mode_t mode);
+
 #endif /* GDM_MISC_H */
 
 /* EOF */
